--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.2.7",
