--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.0",
     "nodemon": "^1.18.3",
-    "uniqid": "^5.1.0"
+    "uniqid": "^5.1.0",
+    "uuid": "^7.0.3"
   }
 }
