--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^5.2.7",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.0",
+    "multer": "^1.4.2",
     "nodemon": "^1.18.3",
     "uniqid": "^5.1.0",
     "uuid": "^7.0.3"
