--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "form-data": "^3.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.2.7",
     "mongoose-unique-validator": "^2.0.3",
