--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.4",
     "dotenv": "^8.2.0",
+    "ejs-promise": "^0.3.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.2.7",
