--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs-promise": "^0.3.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.2.7",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.0",
