--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.4",
+    "custom-mongoose-fuzzy-searching": "^1.0.2",
     "dotenv": "^8.2.0",
     "ejs-promise": "^0.3.3",
     "express": "^4.16.3",
@@ -23,6 +24,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.2.7",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-fuzzy": "^1.0.2",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
