--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mongoose": "^5.2.7",
     "mongoose-auto-increment": "^5.0.1",
     "mongoose-fuzzy": "^1.0.2",
+    "mongoose-fuzzy-search": "0.0.4",
+    "mongoose-fuzzy-searching": "^2.0.2",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
