--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
     "nodemon": "^1.18.3",
+    "sharp": "^0.28.3",
     "uniqid": "^5.1.0",
     "uuid": "^7.0.3"
   }
